# pyVizfMRI

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/pyvizfmri/: __main__.py  global_variables.py  utils.py
src/pyvizfmri/brain_map/: BrainMapFilesManager.py
src/pyvizfmri/dataConvert/: ConverterManager.py  FileConverter.py
src/pyvizfmri/dialogs/: BaseChartDialog.py  brainmapfiles_manager.py  fileconverter_manager.py  settings_dialog.py  sw_params_chooser_dialog.py
src/pyvizfmri/factory/: ChartFactory.py
src/pyvizfmri/mappings/: schaefer400.rda
src/pyvizfmri/widgets/: DataTab.py  HeatMap.py  Histogram.py  Print3DBrain.py  fct_widget.py
src/pyvizfmri/widgets/series/: MultipleLineChart.py  RangeControlWidget.py
