[project]
name = "pyvizfmri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.25"
dependencies = [
    "matplotlib",
    "nibabel",
    "nilearn>=0.12.1",
    "numba>=0.60.0",
    "numpy",
    "openpyxl",
    "pandas",
    "pyreadr",
    "pyside6",
    "scipy",
    "seaborn",
    "superqt",
]

[project.scripts]
pyvizfmri = "pyvizfmri.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvizfmri"]
